--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -61,6 +61,9 @@
              <height>20</height>
             </size>
            </property>
+           <property name="toolTip">
+            <string>Add an image</string>
+           </property>
            <property name="text">
             <string/>
            </property>
@@ -165,6 +168,9 @@
        </item>
        <item>
         <widget class="QToolButton" name="refreshToolButton">
+         <property name="toolTip">
+          <string>Refresh</string>
+         </property>
          <property name="text">
           <string>...</string>
          </property>
@@ -179,6 +185,9 @@
        </item>
        <item>
         <widget class="QToolButton" name="optionsToolButton">
+         <property name="toolTip">
+          <string>Options</string>
+         </property>
          <property name="text">
           <string>...</string>
          </property>
@@ -193,6 +202,9 @@
        </item>
        <item>
         <widget class="QToolButton" name="aboutToolButton">
+         <property name="toolTip">
+          <string>About Qwit</string>
+         </property>
          <property name="text">
           <string>...</string>
          </property>
@@ -207,6 +219,9 @@
        </item>
        <item>
         <widget class="QToolButton" name="exitToolButton">
+         <property name="toolTip">
+          <string>Exit Qwit</string>
+         </property>
          <property name="text">
           <string>...</string>
          </property>
@@ -227,8 +242,6 @@
  </widget>
  <resources>
   <include location="../qwit.qrc"/>
-  <include location="../qwit.qrc"/>
-  <include location="../../../trunk/qwit.qrc"/>
  </resources>
  <connections/>
 </ui>
