--- a/src/DirectMessageDialog.ui
+++ b/src/DirectMessageDialog.ui
@@ -62,9 +62,12 @@
       </widget>
      </item>
      <item>
-      <widget class="QPlainTextEdit" name="messagePlainTextEdit">
+      <widget class="QTextEdit" name="messageTextEdit">
        <property name="tabChangesFocus">
         <bool>true</bool>
+       </property>
+       <property name="acceptRichText">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
