--- a/src/OptionsDialog.ui
+++ b/src/OptionsDialog.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>515</width>
-    <height>541</height>
+    <width>535</width>
+    <height>551</height>
    </rect>
   </property>
   <property name="acceptDrops">
@@ -43,6 +43,11 @@
          <item>
           <property name="text">
            <string>URL shortener</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Translator</string>
           </property>
          </item>
          <item>
@@ -1138,6 +1143,29 @@
                   </item>
                  </layout>
                 </widget>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+         <widget class="QWidget" name="translatorPage">
+          <layout class="QGridLayout" name="gridLayout_14">
+           <item row="0" column="0">
+            <widget class="QGroupBox" name="groupBox_5">
+             <property name="title">
+              <string>Translator</string>
+             </property>
+             <layout class="QGridLayout" name="gridLayout_13">
+              <item row="0" column="0">
+               <widget class="QListWidget" name="listWidget">
+                <property name="selectionMode">
+                 <enum>QAbstractItemView::MultiSelection</enum>
+                </property>
+                <property name="sortingEnabled">
+                 <bool>true</bool>
+                </property>
                </widget>
               </item>
              </layout>
